# Convocatorias

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
Convocatorias/: pyproject.toml  requirements.txt
Convocatorias/convocatorias_seguimiento/: manage.py
Convocatorias/convocatorias_seguimiento/contenido/: admin.py  forms.py
Convocatorias/convocatorias_seguimiento/convocatorias_seguimiento/: settings.py
Convocatorias/convocatorias_seguimiento/templates/: convocatoria.html
convocatorias_seguimiento/: .env.example  db.sqlite3
convocatorias_seguimiento/contenido/: admin.py  forms.py  models.py  reportes.py  urls.py  views.py
convocatorias_seguimiento/contenido/migrations/: 0001_initial.py  0002_indicadormga_meta_proyecto.py  0003_clasificacionvigencia_alter_aliados_aliado_and_more.py  0004_clasificacionindicadormga_codigo_meta.py  0006_rename_meta_indicador_clasificacionindicadormga_meta_cuatrienio_and_more.py  0007_clasificacionaliados_convocatorias_aliados_and_more.py  0008_convocatorias_enlace_convocatoria_and_more.py  0009_rename_objectivo_convocatorias_objetivo.py  0010_alter_convocatorias_enlace_convocatoria_and_more.py  0012_convocatorias_monto_currency_and_more.py  0014_fuentefinanciacion_valor_comprometido_currency_and_more.py  0015_remove_proyecto_monto_contrapartida_and_more.py  (+6 more)
convocatorias_seguimiento/convocatorias_seguimiento/: asgi.py  settings.py  urls.py  wsgi.py
convocatorias_seguimiento/templates/: base.html  convocatoria.html
docs/: GUIA_DISEÑO.md  GuiaReporte.md  MEJORAS_ADMIN.md  MEJORAS_CSS_SIDEBAR.md  REPORTES.md
(+23 files in other folders)
