[project]
name = "convocatorias"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dj-database-url>=3.1.2",
    "django==5.2",
    "django-money>=3.6.0",
    "django-unfold>=0.83.0",
    "gunicorn>=25.1.0",
    "polars[all]>=1.38.1",
    "psycopg2-binary>=2.9.11",
    "python-dotenv>=1.2.2",
    "waitress>=3.0.2",
    "whitenoise>=6.12.0",
]
